Dedup some backend logic
- Make safety checks part of a superclass
- Move all HTTP stuff to a specific base class
- Make PiShock Serial backend switch ports without respawning